# node-core-abi

./: .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  package-lock.json  package.json  tsup.config.ts
.github/workflows/: build.yml
docs/: CONTRIBUTING.md  README.md
examples/: basic.cjs  basic.mjs  nested.mjs  nested2.mjs  serialization.mjs  spring.mjs  test-variants.mjs  tests.cjs  tests.mjs
examples/deno-core-abi-test/: deno.json  main.ts
lib/: core-abi.node
scripts/: copy-module.mjs  update-version.mjs
src/: main.cpp
test/: abi_management.test.js  basic_types.test.js  complex_types.test.js  data_types.test.js  deserialization.test.js  eosio_specific_types.test.js  serialization.test.js  singleton.test.js
test/utils/: test-helpers.js
